--- a/config/config.example
+++ b/config/config.example
@@ -25,3 +25,16 @@ EXCLUDE_DIRS=(
     "$RELATIVE_BACKUP_PATH"
     "NAME/Folder"
 )
+
+# Backup-Retention-Einstellungen
+RETENTION_DAILY=7
+RETENTION_WEEKLY=4
+RETENTION_MONTHLY=3
+
+# Verschlüsselungs-Einstellungen
+ENABLE_ENCRYPTION=false
+
+########################################
+########### DON´T CHANGE ###############
+SKIP_GENERAL_RESTORE=false
+########################################
