feat(config, scripts): add RESTORE_USER support and user update utilities
- Added `RESTORE_USER` configuration option in `config.example` for handling user changes during restore.
- Implemented user path adjustments and selection in `docker_restore.sh`.
- Introduced `update_user_in_docker_config.sh` to update user paths in `container_configs.json`.
- Updated `docker_backup.sh` and `docker_restore.sh` to version 1.1.1 with changes reflecting new user handling and modified logging.
- Used external links for Docker installation guidance, removing inline installation process.
- Fixed LF to CRLF line endings consistency in scripts.

--- a/config/config.example
+++ b/config/config.example
@@ -3,6 +3,10 @@
 # Hauptverzeichnis für alle Backups
 BACKUP_BASE_DIR="/home/pi/backup"
 
+# Nur beim Restore wichtig falls sich der User ändert:
+# Standard-Benutzername für die Wiederherstellung
+RESTORE_USER="pi"
+
 ###########NICHT ÄNDERN!######################
 RELATIVE_BACKUP_PATH=${BACKUP_BASE_DIR#/home/}
 ##############################################
@@ -21,6 +25,7 @@ BACKUP_HOME=true
 
 # Optional: Ausschlüsse vom Backup
 # "$RELATIVE_BACKUP_PATH" NICHT ändern!
+# Beispiel für weitere: "pi/michnicht"
 EXCLUDE_DIRS=(
     "$RELATIVE_BACKUP_PATH"
     "pi/michnicht"
